Adjust height of social buttons to avoid scrollbars in Edge.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -374,7 +374,7 @@ ul.space-bottom-20 > li {
 #social .btn-gh,
 #social .btn-twitter-follow,
 #social .btn-twitter-share {
-  height: 20px;
+  height: 26px;
 }
 
 #social .btn-gh {
